# nba_player_data_lake

./: .gitignore  README.md  destroy  pyproject.toml  script
nba_player_data_lake/: main.py
terraform/: main.tf  provider.tf
